--- a/sketches/Anais-1/style.css
+++ b/sketches/Anais-1/style.css
@@ -40,7 +40,7 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     font-size: 10rem;
     font-weight: bold;
-    color: pink;
+    color: black;
     position: absolute;
     z-index: 1;
     right: 10%;
